# archinfo

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  README.md  offsets.py  pyproject.toml  reqs.txt  requirements.txt  setup.cfg  setup.py
.azure-pipelines/: master.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml  ecosystem.yml  macos.yml  windows.yml
arch/: __init__.py  arch.py  arch_amd64.py  arch_arm.py  arch_mips32.py  arch_ppc32.py  arch_ppc64.py  arch_x86.py  archerror.py
archinfo/: __init__.py  _imports.py  _strenum.py  arch.py  arch_aarch64.py  arch_amd64.py  arch_arm.py  arch_avr.py  arch_bf.py  arch_clemency.py  arch_mips32.py  arch_mips64.py  arch_pcode.py  arch_ppc32.py  arch_ppc64.py  arch_riscv.py  arch_riscv64.py  arch_s390x.py  arch_soot.py  arch_tilegx.py  arch_x86.py  archerror.py  defines.py  mypy.py  plugin.py  plugin_capstone.py  plugin_keystone.py  plugin_pyvex.py  plugin_pyvex_unicorn.py  plugin_unicorn.py  register.py  static_mypy.py  tls.py  types.py
docs/: api.rst  conf.py  index.rst
tests/: test_amd64.py  test_arch_soot.py  test_import.py  test_import_no_capstone.py  test_import_no_keystone.py  test_import_no_pyvex.py  test_import_no_unicorn.py  test_pcode.py  test_register.py  test_riscv.py
