[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "archinfo"
description = "Classes with architecture-specific information useful to other projects."
license = "BSD-2-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = [
    "backports-strenum>=1.2.8;python_version<'3.11'"
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://api.angr.io/projects/archinfo/en/latest/"
Repository = "https://github.com/angr/archinfo"

[project.optional-dependencies]
pcode = [
    "pypcode>=1.1",
]

[dependency-groups]
dev = [
    "pytest",
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-autodoc-typehints",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "archinfo.__version__" }

[tool.setuptools.package-data]
archinfo = ["py.typed"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
