[metadata]
name = archinfo
version = attr: archinfo.__version__
description = Classes with architecture-specific information useful to other projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/archinfo
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
pcode =
    pypcode>=1.1

[options.package_data]
archinfo = py.typed

[options.entry_points]
archinfo.plugins =
    pyvex = archinfo.plugin_pyvex
    capstone = archinfo.plugin_capstone
    keystone = archinfo.plugin_keystone
    unicorn = archinfo.plugin_unicorn
    pyvex_unicorn = archinfo.plugin_pyvex_unicorn

